2011-03-30  Adam Barth  <abarth@webkit.org>

        Add failing Snow Leopard test back to the list of failing tests.

        * platform/chromium/test_expectations.txt:

2011-03-30  Adam Barth  <abarth@webkit.org>

        Moar Chromium Snow Leopard baselines!

        * platform/chromium-mac-snowleopard/fast/backgrounds/svg-as-background-5-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/fast/backgrounds/svg-as-background-5-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/W3C-SVG-1.1/animate-elem-36-t-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/W3C-SVG-1.1/animate-elem-36-t-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/animate-path-discrete-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/animate-path-discrete-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/dynamic-svg-document-creation-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/dynamic-svg-document-creation-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Discrete-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Discrete-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Gamma-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Gamma-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Linear-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Linear-expected.png: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Table-expected.checksum: Added.
        * platform/chromium-mac-snowleopard/svg/custom/feComponentTransfer-Table-expected.png: Added.