@@ -1,3 +1,12 @@
+2011-03-30  Yuta Kitamura  <yutak@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        [Chromium] DumpRenderTree: Implement LayoutTestController::setPluginsEnabled
+        https://bugs.webkit.org/show_bug.cgi?id=57430
+
+        * platform/chromium/test_expectations.txt: Revert the expectation changes caused by r82399.
+
 2011-03-30  Adam Barth  <abarth@webkit.org>
 
         Add failing Snow Leopard test back to the list of failing tests.
